@@ -1,3 +1,8 @@
+2004-11-12  Shawn Betts  <katia_dilkina@verizon.net>
+
+	* nethack-api.el (nh-menu-toggle-all-items): fix which regexp
+	match gets replaced with '-' or '+'
+
 2004-11-11  Shawn Betts  <katia_dilkina@verizon.net>
 
 	* nethack-keys.el (nh-accelerator-chars): add ?# to the vector
